--- a/.vim/coc-settings-default.json
+++ b/.vim/coc-settings-default.json
@@ -39,6 +39,18 @@
             "filetypes": [
                 "python"
             ]
+        },
+        "bash": {
+            "command": "bash-language-server",
+            "args": [
+                "start"
+            ],
+            "filetypes": [
+                "sh"
+            ],
+            "ignoredRootPaths": [
+                "~"
+            ]
         }
     }
 }
