Renamed .vim and .vimrc, discarded language specific configs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .netrwhist
 __pycache__
-.vim/plugged
-.vim/autoload/plug.vim
-.vim/plugs.vim
-.vim/config.vim
-.vim/autoload/builddir/
-.vim/autoload/plug.vim.old
-.vim/coc-settings.json
-.vim/coc-settings-user.json
+vim/plugged
+vim/plugs.vim
+vim/config.vim
+vim/autoload/plug.vim
+vim/autoload/parse.jl
+vim/autoload/parse_exec.jl
+vim/autoload/juliadocstring.vim
+vim/autoload/builddir
+vim/autoload/plug.vim.old
+vim/coc-settings.json
