fix: make git trace dir vim

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .netrwhist
 __pycache__
-vim/plugged
+vim/autoload
+vim/after
 vim/custom
-vim/ftplugin/julia.vim
-vim/autoload/plug.vim
-vim/autoload/parse.jl
-vim/autoload/parse_exec.jl
-vim/autoload/juliadocstring.vim
-vim/autoload/builddir
-vim/autoload/plug.vim.old
-vim/coc-settings.json
+vim/colors
+vim/compiler
+vim/doc
+vim/ftdetect
+vim/indent
+vim/plugged
+vim/plugin
