--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".yadm-project"]
 	path = .yadm-project
-	url = git@github.com:TheLocehiliosan/yadm.git
+	url = https://github.com/TheLocehiliosan/yadm.git
