--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,12 @@
 [user]
     name = Long Wang
     email = wangl.cc@outlook.com
-[core]
-    editor = nvim
 [filter "ignoreline"]
     clean = "sed '/ (git): ignore this line$/d'"
     smudge = cat
 [pull]
     rebase = false
 [diff]
-    tool = vimdiff3
+    tool = $GIT_DIFF_TOOL
+[merge]
+    tool = $GIT_DIFF_TOOL
