style: no expandtab for gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,19 +1,21 @@
 [user]
-    name = Long Wang
-    email = wangl.cc@outlook.com
-    signingkey = B4AA0F55DD21CF6A
+	name = Long Wang
+	email = wangl.cc@outlook.com
+	signingkey = B4AA0F55DD21CF6A
 [filter "ignoreline"]
-    clean = "sed '/ (git): ignore this line$/d'"
-    smudge = cat
+	clean = "sed '/ (git): ignore this line$/d'"
+	smudge = cat
 [pull]
-    rebase = false
+	rebase = false
 [diff]
-    tool = $GIT_DIFF_TOOL
+	tool = $GIT_DIFF_TOOL
 [merge]
-    tool = $GIT_DIFF_TOOL
+	tool = $GIT_DIFF_TOOL
 [url "git@github.com:"]
-    insteadOf = "https://github.com/"
+	insteadOf = "https://github.com/"
 [commit]
-    gpgsign = true
+	gpgsign = true
 [gpg]
-    program = gpg
+	program = gpg
+
+# vim:ts=4:sw=4:noet
