chore(git): imporve gitignore
Many files before this commit is ignored,
which can't add by git directly.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-*
-.*
+/*
+/.*
 
 !*##*
 !.*##*
-!.config/nvim
-!.config/pip
-!.config/pip
-!.config/yadm
-!.gitignore.d
+!/.zshrc
+!/.zprofile
+!/.vim
+!/.vimrc
+!/.iterm
+!/.gnupg
+!/.config
+!/.julia/config/startup.jl
+!/.gitignore
+!/.gitignore.d
