chore(iTerm): rename tokyonigh day and storm

--- a/.iterm/com.googlecode.iterm2.plist
+++ b/.iterm/com.googlecode.iterm2.plist
@@ -561,7 +561,7 @@
 				<real>0.91180282831192017</real>
 			</dict>
 		</dict>
-		<key>iterm_tokyonight_day</key>
+		<key>Tokyonight Day</key>
 		<dict>
 			<key>Ansi 0 Color</key>
 			<dict>
@@ -902,7 +902,7 @@
 				<real>0.59999999999999998</real>
 			</dict>
 		</dict>
-		<key>iterm_tokyonight_storm</key>
+		<key>Tokyonight Storm</key>
 		<dict>
 			<key>Ansi 0 Color</key>
 			<dict>
