fix(iTerm): disable Alternate Mouse Scroll which may break scrolling in vim

--- a/.iterm/com.googlecode.iterm2.plist
+++ b/.iterm/com.googlecode.iterm2.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>AlternateMouseScroll</key>
-	<true/>
+	<false/>
 	<key>AlwaysOpenWindowAtStartup</key>
 	<false/>
 	<key>CheckTestRelease</key>
