--- a/.config/iterm2/com.googlecode.iterm2.plist
+++ b/.config/iterm2/com.googlecode.iterm2.plist
@@ -2634,6 +2634,8 @@
 			<true/>
 			<key>Normal Font</key>
 			<string>JetBrainsMonoNerdFontCompleteM-Regular 13</string>
+			<key>Only The Default BG Color Uses Transparency</key>
+			<false/>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
