--- a/.config/nvim/.stylua.toml
+++ b/.config/nvim/.stylua.toml
@@ -1,5 +1,5 @@
 indent_type = "Spaces"
 indent_width = 2
-quote_style = "AutoPreferSingle"
-call_parentheses = "NoSingleTable"
+column_width = 86
+call_parentheses = "None"
 
