feat(iterm2): disable `BootstrapDaemon`
It may break the `auth sufficient pam_tid.so`,
which is used to authenticate the user with TouchID.

--- a/.config/iterm2/com.googlecode.iterm2.plist
+++ b/.config/iterm2/com.googlecode.iterm2.plist
@@ -6,6 +6,8 @@
 	<false/>
 	<key>AlwaysOpenWindowAtStartup</key>
 	<false/>
+	<key>BootstrapDaemon</key>
+	<false/>
 	<key>CheckTestRelease</key>
 	<true/>
 	<key>Custom Color Presets</key>
