--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,59 @@
 !.local/bin/yadm
 !.local/bin/esh
 
+# The global gitignore is overridden by the local ignores above
+# like: .config/nvim/**, .config/fish/*
+# so we need re-include the global gitignore here
+
+# ============================= macOS ============================== #
+# ================ gitignore/Global/macOS.gitignore ================ #
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# ============================== vim =============================== #
+# ============= github/gitignore/Global/Vim.gitignore ============== #
+
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
