feat: use `~/.editorconfig` to some editor options
The file is not only used for this repository, but also as a global config.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Ignore everything by default
 *
 # git files
-!/.gitignore
-!/.gitmodules
+!.gitignore
+!.gitmodules
+
+# editor config
+!.editorconfig
 
 # Repository files
 !README.md
