--- a/.cargo/config
+++ b/.cargo/config
@@ -3,3 +3,6 @@ replace-with = 'tuna'
 
 [source.tuna]
 registry = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"
+
+[registries.tuna]
+index = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"
