feat: add dark-mode-notify for macOS
So I can use dark-mode-notify to trigger nvim background update.
And I can use it for other things too in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,13 @@
 !.config/iterm2
 !.config/iterm2/com.googlecode.iterm2.plist
 
+# dark mode notify
+!.config/dark-mode-notify
+!.config/dark-mode-notify/*
+.config/dark-mode-notify/launchd.plist
+!.local/bin/dark-mode-notify.swift
+!.local/bin/Makefile
+
 # hammerspoon
 !.hammerspoon
 !.hammerspoon/*
