--- a/.editorconfig
+++ b/.editorconfig
@@ -17,8 +17,15 @@ indent_size = 4
 indent_size = 4
 max_line_length = 92
 
+[*.rs]
+indent_size = 4
+max_line_length = 100
+
 [{.gitconfig,.config/git/config*}]
 indent_style = tab
 
 [{.gitmodules,**/.gitmodules}]
+indent_style = tab
+
+[Makefile]
 indent_style = tab
