--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -36,13 +36,21 @@ report_to_penguin = true
 penguin_id = "084310065"
 
 # fight the last stage if on event period
+# [[tasks.variants]]
+# params = { stage = "SL-8" }
+# condition = { type = "DateTime", start = "2023-08-01T16:00:00", end = "2023-08-21T03:59:59" }
+# fight AP-5 on Mon, Thu
 [[tasks.variants]]
-params = { stage = "SL-8" }
-condition = { type = "DateTime", start = "2023-08-01T16:00:00", end = "2023-08-21T03:59:59" }
-# fight CE-6 on Tue, Thu, Sat
+condition = { type = "Weekday", weekdays = ["Mon", "Thu"] }
+params = { stage = "AP-5" }
+# fight CE-6 on Tue, Sat, Sun
 [[tasks.variants]]
-condition = { type = "Weekday", weekdays = ["Tue", "Thu", "Sat"] }
+condition = { type = "Weekday", weekdays = ["Tue", "Sat", "Sun"] }
 params = { stage = "CE-6" }
+# fight CA-5 on Wed
+[[tasks.variants]]
+condition = { type = "Weekday", weekdays = ["Wed"] }
+params = { stage = "CA-5" }
 # fight 1-7 otherwise
 [[tasks.variants]]
 params = { stage = "1-7" }
