--- a/.config/maa/tasks/fight.toml
+++ b/.config/maa/tasks/fight.toml
@@ -14,12 +14,8 @@ penguin_id = "084310065"
 
 # fight the last stage if on event period
 [[tasks.variants]]
-params = { stage = "SL-8" }
-condition = { type = "DateTime", start = "2023-08-01T16:00:00", end = "2023-08-21T03:59:59" }
-# fight CE-6 on Tue, Thu, Sat
-[[tasks.variants]]
-condition = { type = "Weekday", weekdays = ["Tue", "Thu", "Sat"] }
-params = { stage = "CE-6" }
+params = { stage = "IC-9" }
+condition = { type = "DateTime", start = "2023-08-31T16:00:00", end = "2023-09-10T03:59:59" }
 # fight 1-7 otherwise
 [[tasks.variants]]
 params = { stage = "1-7" }
