feat(kitty): add kitty config

--- a/.config/iterm2/com.googlecode.iterm2.plist
+++ b/.config/iterm2/com.googlecode.iterm2.plist
@@ -2637,7 +2637,7 @@
 			<key>Non-ASCII Ligatures</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>JetBrainsMonoNFM-Regular 13</string>
+			<string>FiraCodeNFM-Ret 13</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Option Key Sends</key>
@@ -4146,7 +4146,7 @@
 			<key>Non-ASCII Ligatures</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>JetBrainsMonoNLNFM-Regular 12</string>
+			<string>FiraCodeNFM-Ret 12</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Open Toolbelt</key>
