--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -35,10 +35,9 @@ expiring_medicine = 3
 report_to_penguin = true
 penguin_id = "084310065"
 
-# fight the last stage if on event period
 [[tasks.variants]]
-params = { stage = "IC-9" }
-condition = { type = "DateTime", start = "2023-08-31T16:00:00", end = "2023-09-10T03:59:59" }
+params = { stage = "CV-7" }
+condition = { type = "DateTime", start = "2023-09-05T16:00:00", end = "2023-19-10T03:59:59" }
 # fight 1-7 otherwise
 [[tasks.variants]]
 params = { stage = "1-7" }
