--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1358,8 +1358,6 @@ editor nvim
 
 #:     remote_control_password "my passphrase" get-colors set-colors focus-window focus-tab
 
-remote_control_password "LNtakb4_TAKB" get-colors set-colors
-
 #: Only the specified actions will be allowed when using this
 #: password. Glob patterns can be used too, for example::
 
@@ -1385,7 +1383,6 @@ remote_control_password "LNtakb4_TAKB" get-colors set-colors
 #: control/#rc-custom-auth> for details.
 
 # allow_remote_control no
-allow_remote_control password
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -1413,6 +1410,8 @@ allow_remote_control password
 
 #: yes
 #:     Remote control requests are always accepted.
+
+allow_remote_control socket-only
 
 # listen_on none
 
@@ -1610,7 +1609,8 @@ exe_search_path /usr/local/bin
 #: system means to use the default system color, light or dark can
 #: also be used to set it explicitly. A value of background means to
 #: use the background color of the currently active window and finally
-#: you can use an arbitrary color, such as #12af59 or red. WARNING:
+#: you can use an arbitrary color, such as #12af59 or red.
+#: WARNING:
 #: This option works by using a hack when arbitrary color (or
 #: background) is configured, as there is no proper Cocoa API for it.
 #: It sets the background color of the entire window and makes the
@@ -1685,9 +1685,9 @@ exe_search_path /usr/local/bin
 
 #: Use a custom mouse cursor for macOS that is easier to see on both
 #: light and dark backgrounds. Nowadays, the default macOS cursor
-#: already comes with a white border. WARNING: this might make your
-#: mouse cursor invisible on dual GPU machines. Changing this option
-#: by reloading the config is not supported.
+#: already comes with a white border.
+#: WARNING: this might make your mouse cursor invisible on dual GPU
+#: machines. Changing this option by reloading the config is not supported.
 
 # macos_colorspace srgb
 
