--- a/.hammerspoon/.luarc.json
+++ b/.hammerspoon/.luarc.json
@@ -1,7 +1,8 @@
 {
-  "diagnostics": {
-    "globals": [
-      "hs"
+  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+  "workspace": {
+    "library": [
+      "Spoons/EmmyLua.spoon/annotations"
     ]
   }
 }
