--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,10 +24,10 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_family      FiraCode Nerd Font Mono Retina
-bold_font        FiraCode Nerd Font Mono Bold Retina
-italic_font      FiraCode Nerd Font Mono Italic
-bold_italic_font FiraCode Nerd Font Mono Bold Italic
+font_family      Fira Code Retina
+bold_font        Fira Code Bold
+italic_font      Victor Mono Italic
+bold_italic_font Victor Mono Bold Italic
 
 # font_size 11.0
 
@@ -67,6 +67,8 @@ font_size 12.0
 #: The syntax is::
 
 #:     symbol_map codepoints Font Family Name
+
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+E0B4-U+E0C8,U+E0CA,U+E0CC-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6A6,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F532,U+F0001-U+F1AF0 Symbols Nerd Font Mono
 
 # narrow_symbols
 
