feat(starship): update icons for starship

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -49,7 +49,7 @@ show_always = true
 
 [directory]
 format = "at [$path]($style)[$read_only]($read_only_style) "
-read_only = " 󰌾"
+read_only = "  "
 
 [fill]
 symbol = "─"
@@ -63,10 +63,6 @@ style = "bold yellow"
 
 [shell]
 disabled = true
-
-[shlvl]
-disabled = false
-symbol = " "
 
 [status]
 disabled = false
@@ -100,22 +96,22 @@ symbol = " "
 [git_commit]
 format = "on [\\($hash$tag\\)]($style) "
 tag_disabled = false
-tag_symbol = " 󰓹"
+tag_symbol = " 󰓹 "                       # nf-fa-tag
 
 # This module is a bit costly
 [git_status]
 format = "$ahead_behind$conflicted$stashed$renamed$modified$deleted$untracked$staged"
 # all with trailing space is needed
-ahead = "⇡ $count "
-behind = "⇣ $count "
-diverged = "⇕ $ahead_count $behind_count "
-conflicted = " "
-stashed = "⚑ $count "
-staged = "● $count "
-renamed = " $count "
-deleted = " $count "
-untracked = " $count "
-modified = " $count "
+ahead = " $count "                        # nf-fa-arrow_circle_up
+behind = " $count "                       # nf-fa-arrow_circle_down
+diverged = " $ahead_count $behind_count " # nf-fa-pause_circle
+conflicted = " "                          # nf-fa-times_circle
+stashed = " $count "                      # nf-fa-dot_circle_o
+staged = " $count "                       # nf-fa-check_circle
+renamed = " $count "                      # nf-fa-arrow_circle_o_right
+deleted = " $count "                      # nf-fa-minus_circle
+untracked = " $count "                    # nf-fa-plus_circle
+modified = " $count "                     # nf-fa-circle_o
 # }}}
 
 # Language or enviroment {{{
