feat(kitty): make `TERM` as `xterm-256color`

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1593,6 +1593,8 @@ exe_search_path /usr/local/bin
 #: work. Changing this option by reloading the config will only affect
 #: newly created windows.
 
+term xterm-256color
+
 #: }}}
 
 #: OS specific tweaks {{{
